--- a/Proyecto-AutoRenta/Vistas/Reserva.xaml
+++ b/Proyecto-AutoRenta/Vistas/Reserva.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Proyecto_AutoRenta.Vistas"
         mc:Ignorable="d"
-       Title="Reserva" Height="550" Width="800"
+        Title="Reserva" Height="550" Width="800"
         WindowStyle="None"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
@@ -15,7 +15,7 @@
 
     <Border CornerRadius="10"                    
             BorderThickness="2"
-            Opacity="0.95">
+           Opacity="0.95" Margin="-15,-15,0,0">
         <Border.BorderBrush>
             <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                 <GradientStop Color="#462AD8" Offset="0"/>
@@ -29,7 +29,7 @@
                 <GradientStop Color="#1B1448" Offset="1"/>
             </LinearGradientBrush>
         </Border.Background>
-        <Grid Margin="-2,2,2,-2">
+        <Grid Margin="-2,8,-2,8">
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
                 <RowDefinition/>
@@ -42,21 +42,21 @@
                     <ColumnDefinition Width="5"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="RESERVA"
-                               Foreground="DarkGray"
-                               FontSize="10"
-                               FontFamily="Montserrat"
-                               Grid.Column="0"
-                               VerticalAlignment="Center"
-                               Margin="10,0,0,0"/>
+                                   Foreground="DarkGray"
+                                   FontSize="10"
+                                   FontFamily="Montserrat"
+                                   Grid.Column="0"
+                                   VerticalAlignment="Center"
+                                   Margin="10,0,0,0"/>
                 <Button x:Name="btnMinimize"                           
-                            BorderThickness="0"
-                            Content="-"
-                            Foreground="White"
-                            FontSize="16"
-                            FontFamily="Montserrat"
-                            Cursor="Hand"
-                            Grid.Column="1"
-                            Click="btnMinimize_Click">
+                                BorderThickness="0"
+                                Content="-"
+                                Foreground="White"
+                                FontSize="16"
+                                FontFamily="Montserrat"
+                                Cursor="Hand"
+                                Grid.Column="1"
+                                Click="btnMinimize_Click">
                     <Button.Style>
                         <Style TargetType="Button">
                             <Setter Property="Background" Value="#28AEED"/>
@@ -70,23 +70,23 @@
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Border Width="18" Height="18"
-                                        CornerRadius="9"
-                                        Background="{TemplateBinding Background}">
+                                            CornerRadius="9"
+                                            Background="{TemplateBinding Background}">
                                 <ContentPresenter VerticalAlignment="Center"
-                                                      HorizontalAlignment="Center"/>
+                                                          HorizontalAlignment="Center"/>
                             </Border>
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
                 <Button x:Name="btnClose"                          
-                            BorderThickness="0"
-                            Content="X"
-                            Foreground="White"
-                            FontSize="12"
-                            FontFamily="Montserrat"
-                            Cursor="Hand"
-                            Grid.Column="2"
-                            Click="btnClose_Click">
+                                BorderThickness="0"
+                                Content="X"
+                                Foreground="White"
+                                FontSize="12"
+                                FontFamily="Montserrat"
+                                Cursor="Hand"
+                                Grid.Column="2"
+                                Click="btnClose_Click">
                     <Button.Style>
                         <Style TargetType="Button">
                             <Setter Property="Background" Value="#DA34AE"/>
@@ -100,30 +100,31 @@
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Border Width="18" Height="18"
-                                        CornerRadius="9"
-                                        Background="{TemplateBinding Background}">
+                                            CornerRadius="9"
+                                            Background="{TemplateBinding Background}">
                                 <ContentPresenter VerticalAlignment="Center"
-                                                      HorizontalAlignment="Center"/>
+                                                          HorizontalAlignment="Center"/>
                             </Border>
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
             </Grid>
-
             <DataGrid x:Name="UserTable" 
-                      AutoGenerateColumns="False" 
-                      CanUserAddRows="False" 
-                      IsReadOnly="True" 
-                      ColumnWidth="*" 
-                      IsSynchronizedWithCurrentItem="True" 
-                      Margin="310,98,23,128" Grid.Row="1" >
+                          AutoGenerateColumns="False" 
+                          CanUserAddRows="False" 
+                          IsReadOnly="True" 
+                          ColumnWidth="*" 
+                          IsSynchronizedWithCurrentItem="True" 
+                                                    Margin="12,225,20,1" Grid.Row="1"  >
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Id" Binding="{Binding PkReserva}" />
-                    <DataGridTextColumn Header="Nombre" Binding="{Binding Nombre}" />
+                    <DataGridTextColumn Header="Nombre" Binding="{Binding Nombre}"/>
                     <DataGridTextColumn Header="Correo" Binding="{Binding Correo}" />
                     <DataGridTextColumn Header="Telefono" Binding="{Binding Telefono}" />
+                    <DataGridTextColumn Header="Gestor" Binding="{Binding Usuario.Nombre}"/>
                     <DataGridTextColumn Header="Modelo" Binding="{Binding Vehiculos.Modelo}" />
-
+                    <DataGridTextColumn Header="Fecha Salida" Binding="{Binding  FechaSalida}" />
+                    <DataGridTextColumn Header="Fecha Entrega" Binding="{Binding FechaRegreso}" />
 
                     <DataGridTemplateColumn Header="Editar">
                         <DataGridTemplateColumn.CellTemplate>
@@ -141,35 +142,12 @@
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
-
-
-            <ComboBox x:Name="SelectVehiculo" HorizontalAlignment="Left" Margin="10,358,0,0" Grid.Row="1" VerticalAlignment="Top" Width="250" Height="28" />
-            <Label Content="RESERVAS" HorizontalAlignment="Center" Grid.Row="1" VerticalAlignment="Top" Foreground="White" FontSize="36" Margin="0,5,0,0"/>
-            <Label Content="Nombre:" HorizontalAlignment="Left" Height="32" Margin="10,116,0,0" Grid.Row="1" VerticalAlignment="Top" Width="106" Foreground="#FFFFF9F9" FontSize="20"/>
-
-
-            <TextBox x:Name="txtNombre"
-                             FontSize="13"
-                             FontWeight="Medium"
-                             FontFamily="Montserrat"                            
-                             Foreground="White"
-                             CaretBrush="LightGray"
-                             BorderBrush="DarkGray"
-                             BorderThickness="0,0,0,2"
-                             Height="28"
-                             VerticalContentAlignment="Center"
-                             Margin="10,153,536,335"
-                             Padding="20,0,0,0" Grid.Row="1" Background="{x:Null}">
-            </TextBox>
-
-
-
-            <Label x:Name="txtcorreo" Content="Correo:" HorizontalAlignment="Left" Height="32" Margin="10,186,0,0" Grid.Row="1" VerticalAlignment="Top" Width="106" Foreground="#FFFFF9F9" FontSize="20" RenderTransformOrigin="0.613,0.367"/>
-
-
-
-            <Label Content="Telefono:" HorizontalAlignment="Left" Height="32" Margin="10,256,0,0" Grid.Row="1" VerticalAlignment="Top" Width="106" Foreground="#FFFFF4F4" FontSize="20"/>
-            <Label Content="Seleccionar Vehiculo" HorizontalAlignment="Left" Height="32" Margin="10,321,0,0" Grid.Row="1" VerticalAlignment="Top" Width="250" FontSize="20" Foreground="#FFFFF9F9"/>
+            <ComboBox x:Name="SelectVehiculo" HorizontalAlignment="Left" Margin="52,158,0,0" Grid.Row="1" VerticalAlignment="Top" Width="158" Height="28" />
+            <Label Content="RESERVAS" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="White" FontSize="36" Margin="0,7,0,0" Grid.RowSpan="2"/>
+            <Label Content="Gestor:" HorizontalAlignment="Left" Height="32" Margin="672,39,0,0" Grid.Row="1" VerticalAlignment="Top" Width="106" Foreground="#FFFFF9F9" FontSize="20"/>
+            <Label x:Name="txtcorreo" Content="Correo:" HorizontalAlignment="Left" Height="32" Margin="275,39,0,0" Grid.Row="1" VerticalAlignment="Top" Width="106" Foreground="#FFFFF9F9" FontSize="20" RenderTransformOrigin="0.613,0.367"/>
+            <Label Content="Telefono:" HorizontalAlignment="Left" Height="32" Margin="455,39,0,0" Grid.Row="1" VerticalAlignment="Top" Width="106" Foreground="#FFFFF4F4" FontSize="20" RenderTransformOrigin="0.113,0.5"/>
+            <Label Content="Seleccionar Vehiculo" HorizontalAlignment="Left" Height="32" Margin="40,116,0,0" Grid.Row="1" VerticalAlignment="Top" Width="193" FontSize="20" Foreground="#FFFFF9F9"/>
             <TextBox x:Name="txtCorreo"
                 FontSize="13"
                 FontWeight="Medium"
@@ -180,8 +158,18 @@
                 BorderThickness="0,0,0,2"
                 Height="28"
                 VerticalContentAlignment="Center"
-                Margin="10,223,536,265"
-                Padding="20,0,0,0" Grid.Row="1" Background="{x:Null}" Width="250"/>
+                                     Margin="275,76,382,411"
+                Padding="20,0,0,0" Grid.Row="1"  Width="158">
+                <TextBox.Background>
+                    <ImageBrush 
+                                        AlignmentX="Left"
+                                        Stretch="Uniform"
+                                        />
+                </TextBox.Background>
+            </TextBox>
+
+
+
             <TextBox x:Name="txtTelefono"
                 FontSize="13"
                 FontWeight="Medium"
@@ -192,16 +180,27 @@
                 BorderThickness="0,0,0,2"
                 Height="28"
                 VerticalContentAlignment="Center"
-                Margin="10,288,536,200"
-                Padding="20,0,0,0" Grid.Row="1" Background="{x:Null}" Width="250"/>
+                                     Margin="455,76,202,411"
+                Padding="20,0,0,0" Grid.Row="1" Width="158">
+
+                <TextBox.Background>
+                    <ImageBrush 
+                                         AlignmentX="Left"
+                                        Stretch="Uniform"
+                    />
+                </TextBox.Background>
+            </TextBox>
+
             <Button x:Name="btnReserva" 
-                        Content="RESERVAR " 
+                        Content="Guardar " 
                         HorizontalAlignment="Left" 
-                        Height="45" Margin="55,421,0,0" 
+                                            Height="45" Margin="635,135,0,0" 
                         Grid.Row="1" VerticalAlignment="Top" 
                         Width="160" 
                         Style="{StaticResource RoundButtonTemplate}"
-                        Click="btnReserva_Click" Background="DodgerBlue" Foreground="White" FontWeight="Bold" FontSize="20"/>
+                                            Click="btnReserva_Click" Background="DodgerBlue" Foreground="White" FontWeight="Bold" FontSize="20" RenderTransformOrigin="0.469,-0.111"/>
+
+
             <TextBox x:Name="txtPkReserva_"
                 FontSize="13"
                 FontWeight="Medium"
@@ -212,16 +211,16 @@
                 BorderThickness="0,0,0,2"
                 Height="28"
                 VerticalContentAlignment="Center"
-                Margin="10,82,706,406"
+                                     Margin="24,76,741,411"
                 IsEnabled="False"
-                Padding="20,0,0,0" Grid.Row="1" Background="{x:Null}"/>
+                      Padding="20,0,0,0" Grid.Row="1" Background="{x:Null}" Width="50"/>
             <Button x:Name="btngoback"                          
                 BorderThickness="0"              
                 Foreground="White"
                 FontSize="12"
                 FontFamily="Montserrat"
                 Cursor="Hand"
-                Margin="18,21,733,459" Grid.Row="1" Click="btngoback_Click">
+                    Margin="12,4,761,476" Grid.Row="1" Click="btngoback_Click">
                 <Button.Background>
                     <ImageBrush ImageSource="/Images/cerrar-sesion.png"/>
                 </Button.Background>
@@ -246,9 +245,38 @@
                     </ControlTemplate>
                 </Button.Template>
             </Button>
+            <Label Content="Fecha Salida" HorizontalAlignment="Left" Height="32" Margin="257,113,0,0" Grid.Row="1" VerticalAlignment="Top" Width="124" FontSize="20" Foreground="#FFFFF9F9"/>
+            <Label Content="Fecha Regreso" HorizontalAlignment="Left" Height="38" Margin="455,113,0,0" Grid.Row="1" VerticalAlignment="Top" Width="139" FontSize="20" Foreground="#FFFFF9F9"/>
+            <ComboBox x:Name="SelectUser" HorizontalAlignment="Left" Margin="665,82,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120"/>
+            <DatePicker x:Name="datePickerSalida"   HorizontalAlignment="Left" Margin="256,158,0,0" Grid.Row="1" VerticalAlignment="Top"/>
+            <DatePicker x:Name="datePickerRegreso"  HorizontalAlignment="Left" Margin="455,158,0,0" Grid.Row="1" VerticalAlignment="Top" RenderTransformOrigin="0.512,0.958"/>
+            <Label Content="Nombre:" HorizontalAlignment="Left" Margin="97,39,0,0" Grid.Row="1" VerticalAlignment="Top" Foreground="#FFFFF3F3" FontSize="20" Height="32" Width="106"/>
+            <TextBox x:Name="txtNombre"
+                FontSize="13"
+                FontWeight="Medium"
+                FontFamily="Montserrat"                            
+                Foreground="White"
+                CaretBrush="LightGray"
+                BorderBrush="DarkGray"
+                BorderThickness="0,0,0,2"
+                Height="28"
+                VerticalContentAlignment="Center"
+                Margin="96,76,561,411"
+                Padding="20,0,0,0" Grid.Row="1"  Width="158">
+
+                <TextBox.Background>
+                    <ImageBrush
+                                        AlignmentX="Left"
+                                        Stretch="Uniform"
+                                        />
+                </TextBox.Background>
+            </TextBox>
+            <Image HorizontalAlignment="Left" Height="29" Margin="635,78,0,0" Grid.Row="1" VerticalAlignment="Top" Width="30"  RenderTransformOrigin="0.172,0.483"/>
+            <Image HorizontalAlignment="Left" Height="32" Margin="16,156,0,0" Grid.Row="1" VerticalAlignment="Top" Width="31"/>
+            <Label Content="ID" HorizontalAlignment="Left" Margin="40,39,0,0" Grid.Row="1" VerticalAlignment="Top" Foreground="White" FontSize="18" Height="32"/>
+
+
 
         </Grid>
     </Border>
-
 </Window>
-
