--- a/Proyecto-AutoRenta/Vistas/Lavado.xaml
+++ b/Proyecto-AutoRenta/Vistas/Lavado.xaml
@@ -1,26 +1,22 @@
-﻿<Window x:Class="Proyecto_AutoRenta.Vistas.Inventario"
+﻿<Window x:Class="Proyecto_AutoRenta.Vistas.Lavado"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Proyecto_AutoRenta.Vistas"
         mc:Ignorable="d"
-       Title="Inventario" Height="550" Width="800"
-        WindowStyle="None"
-        ResizeMode="NoResize"
-        WindowStartupLocation="CenterScreen"
-        Background="Transparent"
-        AllowsTransparency="True"
-        MouseDown="Window_MouseDown">
+        Title="Lavado" Height="450" Width="800">
+
 
     <Border CornerRadius="12">
         <Border.Background>
-            <ImageBrush ImageSource="/Images/fondo_inventario.png"
-                        Stretch="UniformToFill" Opacity="1"/>
+
+            <ImageBrush ImageSource="\Images\6hkkleubbd931.jpg"
+                        Stretch="None"/>
         </Border.Background>
         <Border CornerRadius="10"                    
             BorderThickness="2"
-            Opacity="0.95">
+            Opacity="0.95" Margin="0,1,0,-1">
             <Border.BorderBrush>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                     <GradientStop Color="#462AD8" Offset="0"/>
@@ -35,6 +31,7 @@
                 </LinearGradientBrush>
             </Border.Background>
             <Grid>
+
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"/>
                     <RowDefinition/>
@@ -46,13 +43,13 @@
                         <ColumnDefinition Width="25"/>
                         <ColumnDefinition Width="5"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Text="INVENTARIO"
-                               Foreground="#FFCABABA"
+                    <TextBlock Text="LOG IN"
+                               Foreground="DarkGray"
                                FontSize="10"
                                FontFamily="Montserrat"
                                Grid.Column="0"
                                VerticalAlignment="Center"
-                               Margin="10,0,0,0" FontWeight="Bold"/>
+                               Margin="10,0,0,0"/>
                     <Button x:Name="btnMinimize"                           
                             BorderThickness="0"
                             Content="-"
@@ -112,82 +109,34 @@
                                 </Border>
                             </ControlTemplate>
                         </Button.Template>
+
+
                     </Button>
                 </Grid>
-                <Label Content="¡Bienvenido!" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" FontSize="24" Margin="0,29,0,0" Grid.RowSpan="2"/>
-                <Label Content="Modelo del vehículo&#xD;&#xA;" HorizontalAlignment="Left" Margin="144,52,0,0" Grid.Row="1" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" Height="44" FontSize="18"/>
-                <TextBox x:Name="txtModelo" 
-                    FontSize="13"
-                    FontWeight="Medium"
-                    FontFamily="Montserrat"                            
-                    Foreground="White"
-                    CaretBrush="LightGray"
-                    BorderBrush="DarkGray"
-                    BorderThickness="0,0,0,2"
-                    Height="28"
-                    VerticalContentAlignment="Center"
-                    Margin="154,86,480,402"
-                    Padding="26,0,0,0" Grid.Row="1" Width="NaN">
-                    <TextBox.Background>
-                        <ImageBrush ImageSource="/Images/coche2.png"
-                    Stretch="Uniform"
-                    AlignmentX="Left"
-                    AlignmentY="Center" Opacity=".6"/>
-                    </TextBox.Background>
-                    <TextBox.ToolTip>
-                        <ToolTip Content="Ingresa el modelo del vehículo que registrará"/>
-                    </TextBox.ToolTip>
-                </TextBox>
-                <TextBox x:Name="txtTarifa" 
-                    FontSize="13"
-                    FontWeight="Medium"
-                    FontFamily="Montserrat"                            
-                    Foreground="White"
-                    CaretBrush="LightGray"
-                    BorderBrush="DarkGray"
-                    BorderThickness="0,0,0,2"
-                    Height="28"
-                    VerticalContentAlignment="Center"
-                    Margin="398,84,256,404"
-                    Padding="25,0,0,0" Grid.Row="1" Width="NaN">
-                    <TextBox.Background>
-                        <ImageBrush ImageSource="/Images/moneda.png"
-                                        Stretch="Uniform"
-                                        AlignmentX="Left" TileMode="None"/>
-                    </TextBox.Background>
-                    <TextBox.ToolTip>
-                        <ToolTip Content="Ingresa el precio de renta sin IVA/24 hrs"/>
-                    </TextBox.ToolTip>
-                </TextBox>
-                <Label Content="Tipo de vehículo" HorizontalAlignment="Left" Margin="609,52,0,0" Grid.Row="1" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" FontSize="18"/>
-                <Label Content="Tarifa de renta" HorizontalAlignment="Left" Margin="402,48,0,0" Grid.Row="1" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" FontSize="18"/>
-                <Button x:Name="btnAgregar"
-                    Content="Guardar"
-                    HorizontalAlignment="Center"
-                      Margin="0,459,0,0"
-                     Grid.Row="1"
-                     VerticalAlignment="Top"
-                     Height="35"
-                     Width="124"
-                     Style="{StaticResource RoundButtonTemplate}"
-                     Click="BtnAgregar_Click" FontWeight="Bold" FontSize="20" Background="#FF1E42FF"/>
+                <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden"/>
+                <Label Content="Lavado de autos" HorizontalAlignment="Center" Height="56" Margin="0,22,0,0" Grid.Row="1" VerticalAlignment="Top" Width="290" FontSize="36" FontWeight="Bold">
+                    <Label.Foreground>
+                        <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="#FF17AFFF"/>
+                            <GradientStop Color="#FFEFEFEF" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Label.Foreground>
+                </Label>
+
+
+
                 <DataGrid x:Name="UserTable" 
                           AutoGenerateColumns="False" 
                           CanUserAddRows="False" 
                           IsReadOnly="True" 
                           ColumnWidth="*" 
                           IsSynchronizedWithCurrentItem="True" 
-                          Margin="26,143,26,62" 
-                          Height="NaN" 
-                          Grid.Row="1" 
-                          Width="NaN"
-                          Background="#FF8F86C7">
+                                                    Margin="16,200,16,26" Grid.Row="1"  >
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Id" Binding="{Binding PkVehiculo}" />
-                        <DataGridTextColumn Header="Modelo" Binding="{Binding Modelo}" />
-                        <DataGridTextColumn Header="Tipo" Binding="{Binding Tipo}" />
-                        <DataGridTextColumn Header="Tarifa" Binding="{Binding Tarifa}" />
+                        <DataGridTextColumn Header="Id" Binding="{Binding PkLavado}" />
 
+                        <DataGridTextColumn Header="Modelo" Binding="{Binding Vehiculos.Modelo}" />
+                        <DataGridTextColumn Header="Lavado" Binding="{Binding Estado}"/>
 
                         <DataGridTemplateColumn Header="Editar">
                             <DataGridTemplateColumn.CellTemplate>
@@ -205,7 +154,8 @@
                         </DataGridTemplateColumn>
                     </DataGrid.Columns>
                 </DataGrid>
-                <TextBox x:Name="txtPkVehiculo" 
+                <!--Parte de los textBox y label-->
+                <TextBox x:Name="txtPkLavado" 
                     FontSize="13"
                     FontWeight="Medium"
                     FontFamily="Montserrat"                            
@@ -215,34 +165,54 @@
                     BorderThickness="0,0,0,2"
                     Height="28"
                     VerticalContentAlignment="Center"
-                    Margin="52,84,711,404"
+                    Margin="40,127,722,245"
                     IsEnabled="False"
                     Padding="10,0,0,0" Grid.Row="1" Background="{x:Null}" Width="NaN">
                     <TextBox.ToolTip>
                         <ToolTip Content="En este campo se enseñará el ID del vehículo"/>
                     </TextBox.ToolTip>
                 </TextBox>
-                <ComboBox x:Name="SelectTipo" HorizontalAlignment="Left" Margin="613,91,0,0" Grid.Row="1" VerticalAlignment="Top" Width="150" Height="29">
-                    <ComboBoxItem Content="Deportivo" />
-                    <ComboBoxItem Content="Furgonetas" />
-                    <ComboBoxItem Content="Eléctrico" />
-                    <ComboBoxItem Content="Convertibles" />
-                    <ComboBoxItem Content="Sedanes" />
-                </ComboBox>
 
-                <Label Content="ID" HorizontalAlignment="Left" Margin="52,48,0,0" Grid.Row="1" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" FontSize="18"/>
+                <Label Content="ID" HorizontalAlignment="Left" Height="30" Margin="40,101,0,0" Grid.Row="1" VerticalAlignment="Top" Width="30" Foreground="#FFFFF3F3" FontWeight="Bold" FontSize="14"/>
+                <Label Content="Vehiculo"  HorizontalAlignment="Left" Height="29" Margin="170,96,0,0" Grid.Row="1" VerticalAlignment="Top" Width="86" Foreground="#FFF7F7F7" FontWeight="Bold" FontSize="16"/>
+                <ComboBox x:Name ="SelectVehiculo" Margin="133,134,502,0" Grid.Row="1" VerticalAlignment="Top" Height="23"/>
+
+                <Label Content="Estado Del Vehiculo" HorizontalAlignment="Left" Height="32" Margin="354,96,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Foreground="White" FontSize="16" FontWeight="Bold"/>
+                <Button x:Name="BtnAgregar" 
+                        Content="Guardar" 
+                        HorizontalAlignment="Left" 
+                        Margin="646,122,0,0" Grid.Row="1" 
+                        VerticalAlignment="Top"
+                         Click="BtnAgregar_Click" RenderTransformOrigin="0.555,0.503" Height="32" Width="96">
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="-0.748"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                </Button>
                 <Button x:Name="btnFlechaIzquierda"                          
                             BorderThickness="0"
                             Foreground="White"
                             FontSize="12"
                             FontFamily="Montserrat"
                             Cursor="Hand"
-                            Click="BtnFlechaIzquierda_Click" Margin="10,5,765,489" Grid.Row="1">
-                    <Image Source="/Images/flecha-izquierda.png"
+                            Click="BtnFlechaIzquierda_Click" Margin="8,5,739,355" Grid.Row="1" RenderTransformOrigin="0.5,0.5">
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="-0.083"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                    <Image Source="/Images/cerrar-sesion.png"
                     Stretch="Fill"/>
                     <Button.Style>
                         <Style TargetType="Button">
-                            <Setter Property="Background" Value="#DA34AE"/>
+                            <Setter Property="Background" Value="Transparent"/>
                             <Style.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
                                     <Setter Property="Background" Value="#C62DAE"/>
@@ -295,7 +265,11 @@
                     </Button.Template>
                 </Button>
                 
+                <TextBox x:Name="txtEstado" HorizontalAlignment="Left" Height="23" Margin="358,131,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="161"/>
+
+
             </Grid>
+
         </Border>
 
     </Border>
