--- a/Proyecto-AutoRenta/Vistas/Reserva.xaml
+++ b/Proyecto-AutoRenta/Vistas/Reserva.xaml
@@ -245,6 +245,40 @@
                     </ControlTemplate>
                 </Button.Template>
             </Button>
+
+            <Button x:Name="btngobackadmin"                          
+                BorderThickness="0"              
+                Foreground="White"
+                FontSize="12"
+                FontFamily="Montserrat"
+                Cursor="Hand"
+                Visibility="Collapsed"
+                Margin="1,4,750,476" Grid.Row="1" Click="btngobackadmin_Click">
+                <Button.Background>
+                    <ImageBrush ImageSource="/Images/flecha-izquierda.png"/>
+                </Button.Background>
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Background" Value="#DA34AE"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#C62DAE"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+                <Button.Template>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Width="28" Height="28"
+                            CornerRadius="9"
+                            Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center"
+                                HorizontalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+            
             <Label Content="Fecha Salida" HorizontalAlignment="Left" Height="32" Margin="257,113,0,0" Grid.Row="1" VerticalAlignment="Top" Width="124" FontSize="20" Foreground="#FFFFF9F9"/>
             <Label Content="Fecha Regreso" HorizontalAlignment="Left" Height="38" Margin="455,113,0,0" Grid.Row="1" VerticalAlignment="Top" Width="139" FontSize="20" Foreground="#FFFFF9F9"/>
             <ComboBox x:Name="SelectUser" HorizontalAlignment="Left" Margin="665,82,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120"/>
