--- a/Proyecto-AutoRenta/Vistas/Lavado.xaml
+++ b/Proyecto-AutoRenta/Vistas/Lavado.xaml
@@ -109,6 +109,8 @@
                                 </Border>
                             </ControlTemplate>
                         </Button.Template>
+
+
                     </Button>
                 </Grid>
                 <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden"/>
@@ -131,10 +133,9 @@
                           IsSynchronizedWithCurrentItem="True" 
                                                     Margin="16,200,16,26" Grid.Row="1"  >
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Id" Binding="{Binding PkReserva}" />
-                        <DataGridTextColumn Header="Nombre" Binding="{Binding Nombre}"/>
-                        <DataGridTextColumn Header="Lavado" Binding="{Binding Lavado}"/>
+                        <DataGridTextColumn Header="Id" Binding="{Binding PkLavado}" />
                         <DataGridTextColumn Header="Modelo" Binding="{Binding Vehiculos.Modelo}" />
+                        <DataGridTextColumn Header="Estado" Binding="{Binding Estado}"/>
 
                         <DataGridTemplateColumn Header="Editar">
                             <DataGridTemplateColumn.CellTemplate>
@@ -153,7 +154,7 @@
                     </DataGrid.Columns>
                 </DataGrid>
                 <!--Parte de los textBox y label-->
-                <TextBox x:Name="txtPkVehiculo" 
+                <TextBox x:Name="txtPkLavado" 
                     FontSize="13"
                     FontWeight="Medium"
                     FontFamily="Montserrat"                            
@@ -163,24 +164,73 @@
                     BorderThickness="0,0,0,2"
                     Height="28"
                     VerticalContentAlignment="Center"
-                    Margin="40,129,722,243"
+                    Margin="40,127,722,245"
                     IsEnabled="False"
                     Padding="10,0,0,0" Grid.Row="1" Background="{x:Null}" Width="NaN">
                     <TextBox.ToolTip>
                         <ToolTip Content="En este campo se enseñará el ID del vehículo"/>
                     </TextBox.ToolTip>
                 </TextBox>
+
                 <Label Content="ID" HorizontalAlignment="Left" Height="30" Margin="40,101,0,0" Grid.Row="1" VerticalAlignment="Top" Width="30" Foreground="#FFFFF3F3" FontWeight="Bold" FontSize="14"/>
-                <Label Content="Selecione el vheiculo" HorizontalAlignment="Left" Height="29" Margin="133,99,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Foreground="#FFF7F7F7" FontWeight="Bold" FontSize="16"/>
-                <ComboBox HorizontalAlignment="Left" Margin="140,135,0,0" Grid.Row="1" VerticalAlignment="Top" Width="151"/>
-                <Label Content="Registrar como Vheiculo limpio" HorizontalAlignment="Left" Height="32" Margin="358,99,0,0" Grid.Row="1" VerticalAlignment="Top" Width="250" Foreground="White" FontSize="16" FontWeight="Bold"/>
-                <ComboBox x:Name="SelectLavado" HorizontalAlignment="Left" Margin="363,135,0,0" Grid.Row="1" VerticalAlignment="Top" Width="120">
+                <Label Content="Selecione el vheiculo" HorizontalAlignment="Left" Height="29" Margin="133,94,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Foreground="#FFF7F7F7" FontWeight="Bold" FontSize="16"/>
+                <ComboBox x:Name ="SelectVehiculo" Margin="133,134,502,0" Grid.Row="1" VerticalAlignment="Top" Height="23"/>
 
-                    <ComboBoxItem Content="Lavado"/>
-                    <ComboBoxItem Content="En Proceso"/>
-                    <ComboBoxItem Content="No Lavado"/>
-
-                </ComboBox>
+                <Label Content="Estado Del Vehiculo" HorizontalAlignment="Left" Height="32" Margin="358,94,0,0" Grid.Row="1" VerticalAlignment="Top" Width="170" Foreground="White" FontSize="16" FontWeight="Bold"/>
+                <Button x:Name="BtnAgregar" 
+                        Content="Agregar registro" 
+                        HorizontalAlignment="Center" 
+                        Margin="648,135,0,0" Grid.Row="1" 
+                        VerticalAlignment="Top"
+                         Click="BtnAgregar_Click" RenderTransformOrigin="0.555,0.503" Height="32" Width="96">
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="-0.748"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                </Button>
+                <Button x:Name="btnFlechaIzquierda"                          
+                            BorderThickness="0"
+                            Foreground="White"
+                            FontSize="12"
+                            FontFamily="Montserrat"
+                            Cursor="Hand"
+                            Click="BtnFlechaIzquierda_Click" Margin="8,5,739,340" Grid.Row="1" RenderTransformOrigin="0.5,0.5">
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform Angle="-0.083"/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                    <Image Source="/Images/flecha-izquierda.png"
+                    Stretch="Fill"/>
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Background" Value="#DA34AE"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#C62DAE"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border Width="18" Height="18"
+                                        CornerRadius="9"
+                                        Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center"
+                                                      HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+                <TextBox x:Name="txtEstado" HorizontalAlignment="Left" Height="23" Margin="358,131,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="161"/>
 
 
             </Grid>
